--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
 
 install:
     - pip install -q Django==$DJANGO_VERSION
+    - pip install -r requirements.txt
     - pip install codecov
 
 script: 
