--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 coverage==4.3.4
 dj-database-url==0.4.2
 Django==1.10.6
+django-storages==1.5.2
 gunicorn==19.7.0
 olefile==0.44
 packaging==16.8
