📛 AWS Bucket Name added to app.json

--- a/app.json
+++ b/app.json
@@ -3,6 +3,8 @@
   "scripts": {
   },
   "env": {
+    "INHERIT_THIS_CONFIG_VAR": {
+    "AWS_STORAGE_BUCKET_NAME": true
   },
   "formation": {
   },
