--- a/app.json
+++ b/app.json
@@ -3,10 +3,9 @@
   "scripts": {
   },
   "env": {
-    "INHERIT_THIS_CONFIG_VAR": {
-    "AWS_STORAGE_BUCKET_NAME": true
-    },
-    "DONT_INHERIT_THIS_CONFIG_VAR": "production"
+    "AWS_STORAGE_BUCKET_NAME": {
+    "required": true
+    }
   },
   "formation": {
   },
