--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ local_settings.py
 db.sqlite3
 media
 .coverage
+.env
 
 # End of https://www.gitignore.io/api/django
 news/uploads/background1.jpg
