--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coverage==4.3.4
 dj-database-url==0.4.2
 Django==1.10.6
 django-storages==1.5.2
+dotenv==0.0.5
 gunicorn==19.7.0
 olefile==0.44
 packaging==16.8
