--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 appdirs==1.4.3
-boto==2.46.1
-coverage==4.3.4
+boto==2.48.0
+coverage==4.4.2
 dj-database-url==0.4.2
-Django==1.10.6
-django-dotenv==1.4.1
-django-storages==1.5.2
-gunicorn==19.7.0
-olefile==0.44
+Django==2.0.1
+django-dotenv==1.4.2
+django-storages==1.6.5
+gunicorn==19.7.1
+olefile==0.45.1
 packaging==16.8
-Pillow==4.0.0
-psycopg2==2.7
+Pillow==5.0.0
+psycopg2==2.7.3.2
 pyparsing==2.2.0
-six==1.10.0
-whitenoise==3.3.0
+pytz==2017.3
+six==1.11.0
+whitenoise==3.3.1
