--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ appdirs==1.4.3
 boto==2.48.0
 coverage==4.4.2
 dj-database-url==0.4.2
-Django==1.11.9
+Django==1.11
 django-dotenv==1.4.2
+django-el-pagination==3.2.4
+django-sslserver==0.20
 django-storages==1.6.5
 gunicorn==19.7.1
 olefile==0.45.1
